<resources>
    <string name="Admob_AppID" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Admob_adUnitId" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fb_adid" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string-array name="sticker_color">
        <item>#000000</item>
        <item>#FFFFFF</item>
        <item>#C9BCB4</item>
        <item>#F0ACAC</item>
        <item>#F2B78E</item>
        <item>#F0D69C</item>
        <item>#C5DDA2</item>
        <item>#4EB2A7</item>
        <item>#05779A</item>
        <item>#9AB9F0</item>
        <item>#A484B7</item>
        <item>#F2C0E3</item>
        <item>#B91F32</item>
        <item>#C26024</item>
        <item>#FA9E28</item>
        <item>#FEE847</item>
        <item>#72C52F</item>
        <item>#0B7D09</item>
        <item>#27CBB9</item>
        <item>#3574E6</item>
        <item>#4040C9</item>
        <item>#8A33B5</item>
    </string-array>
    <string name="blocked_by_developer" translatable="false">Blocked by Developer</string>
    <string name="para_one" translatable="false">For your security, your phone is not allowed to install this app from unknown source which can be unsafe some time.</string>
    <string name="para_two" translatable="false">Your phone and personal data are more vulnerable to attack by apps from unknown sources .</string>
    <string name="install" translatable="false">Install From PlayStore</string>
    <string-array name="text_options">
        <item>Crop</item>
        <item>Filter</item>
        <item>Effect</item>
        <item>Adjust</item>
        <item>HSL</item>
        <item>Layer</item>
    </string-array>
    <string-array name="filters">
        <item>Color1</item>
        <item>Color2</item>
        <item>Duo</item>
        <item>Pink</item>
        <item>Fresh</item>
        <item>Euro</item>
        <item>Dark</item>
        <item>Ins</item>
        <item>Elegant</item>
        <item>Golden</item>
        <item>Tint</item>
        <item>Film</item>
        <item>Lomo</item>
        <item>Movie</item>
        <item>Retro</item>
        <item>BW</item>
    </string-array>
    <string-array name="effect_light">
        <item>Light1</item>
        <item>Light2</item>
        <item>Festival</item>
        <item>Love</item>
        <item>Prism</item>
        <item>Neon</item>
    </string-array>
    <string-array name="effect_texture">
        <item>Dust</item>
        <item>Stains</item>
        <item>Vintage</item>
        <item>Scratch</item>
    </string-array>
    <string-array name="effect_weather">
        <item>Snow</item>
        <item>Cloud</item>
        <item>Fog</item>
        <item>Sunlight</item>
    </string-array>
    <string name="background_image">Background Image</string>
    <string name="light_effect">Light Effect</string>
    <string name="resize">Resize</string>
    <string name="rotate">Rotate</string>
    <string name="_90">- 90°</string>
    <string name="crop">Crop</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="plus_90">+ 90°</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="blend">Blend</string>
    <string name="effect">Effect</string>
    <string name="light">Light</string>
    <string name="texture">Texture</string>
    <string name="weather">Weather</string>
    <string name="gallery">Gallery</string>
    <string name="hue">HUE</string>
    <string name="saturation">SATURATION</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="icon">Icon</string>
    <string name="text">Text</string>
    <string name="sticker">Sticker</string>
    <string name="border">Border</string>
    <string name="black_icon">Black Icon</string>
    <string name="border_blur">Border Blur</string>
    <string name="done_save">Done|Save</string>
    <string name="reset">Reset</string>
    <string name="welcome">Made with 💕💕💕</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="register1">Sign Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="email">Email</string>
    <string name="login2">Login</string>
    <string name="have_an_account_login">have an account?Login</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="beauty_title">Beauty</string>
    <string name="remover_title">Remover</string>
    <string name="collage_title">Collage</string>
    <string name="mosaic_title">Mosaic</string>
    <string name="capture_title">Capture High Quality Images</string>
    <string name="iphone_title">Iphone 14 Pro</string>
    <string name="samsung_title">Samsung S23</string>
    <string name="nikon_title">Nikon \nD850</string>
    <string name="sony_title">Sony \nA7IV</string>
    <string name="storage_perm_header">Access to Photos</string>
    <string name="storage_perm_body">Grant permission to access photos from gallery here!</string>
    <string name="storage_perm_txt">Allow Access</string>
    <string name="open_settings">Allow from Settings</string>
    <string name="cam_denied">Camera Access Denied</string>
    <string name="noti_msg_body">Notification permission denied. Allow from settings</string>
    <string name="top_features_title">Our Top Features</string>
    <string name="select_photos_label">Select up to 10 photo(s)</string>
    <string name="albums_lbl">Select Album</string>
    <string name="collage_error_msg">Please select photo(s) to create collage</string>
    <string name="photos_lbl">Select Photo(s)</string>
    <string name="flip_label">Flip</string>
    <string name="rotate_label">Rotate</string>
    <string name="crop_label">Crop</string>
    <string name="replace_label">Replace</string>
    <string name="layout_label">Layout</string>
    <string name="border_label">Border</string>
    <string name="background_label">Background</string>
    <string name="save_label">Save</string>
    <string name="crop_image_lbl">Crop Image</string>
    <string name="collage_label">Create Collage</string>
    <string name="photos_warning_lbl">You only need %d photo(s)</string>
    <string name="next_lbl">Next</string>
    <string name="share_header">Share via</string>
    <string name="save_picture_lbl">Save Picture</string>
    <string name="insta_msg">Instagram is not installed on this device</string>
    <string name="whatsapp_msg">WhatsApp is not installed on this device</string>
    <string name="facebook_msg">Facebook is not installed on this device</string>
    <string name="share_lbl">Share</string>
    <string name="cancel_label">Cancel</string>
    <string name="share_picture_lbl">Share Picture</string>
    <string name="share_whatsapp">Do you want to share this picture to Whatsapp?</string>
    <string name="share_facebook">Do you want to share this picture to Facebook?</string>
    <string name="share_instagram">Do you want to share this picture to Instagram?</string>
    <string name="edit_photo_lbl">Edit Photo</string>
    <string name="apply_lbl">Apply</string>
    <string name="revert_changes_lbl">Revert Changes</string>
    <string name="enter_here_hint">Enter here</string>
    <string name="done_lbl">Add</string>
    <string name="changes_appl_lbl">Changes Applied</string>
    <string name="select_language_lbl">Select Language</string>
    <string name="select_lbl">Select</string>
    <string name="remove_ads_label">Remove Ads</string>
    <string name="get_features_label">Get All Premium Features</string>
    <string name="get_filters_label">Get Unlimited Filters</string>
    <string name="vip_channel_label">VIP Exclusive Channel</string>
    <string name="premium_plan_lbl">Premium Plan</string>
    <string name="weekly_lbl">Weekly</string>
    <string name="weekly_body">You save 10%</string>
    <string name="monthly_lbl">Monthly</string>
    <string name="weekly_rate">$5.00</string>
    <string name="monthly_rate">$15.00</string>
    <string name="manage_sub"><u>Manage Subscription</u></string>
    <string name="terms_of_use_lbl">Terms of use</string>
    <string name="privacy_policy_lbl">Privacy Policy</string>
    <string name="restore_lbl">Restore</string>
    <string name="filter_to_try_lbl">Filter to Try</string>
    <string name="before_lbl">Before</string>
    <string name="after_lbl">After</string>
    <string name="try_now_lbl">Try Now</string>
    <string name="home_lbl">Home</string>
    <string name="mine_lbl">Mine</string>
    <string name="camera_lbl">Camera</string>
    <string name="gallery_lbl">Gallery</string>
    <string name="collage_lbl">Collage</string>
    <string name="no_converted_msg">Oops! It looks like you haven\'t edited and saved any pictures yet.</string>
    <string name="saved_lbl">Saved</string>
    <string name="delete_label">Delete</string>
    <string name="rename_label">Rename</string>
    <string name="rename_file_label">Rename File</string>
    <string name="con_error_msg">An error occurred! Please try again after few moments</string>
    <string name="ok_label">OK</string>
    <string name="enter_name_label">Enter Name</string>
    <string name="duplicate_name">Duplicate image name. Please choose a different name</string>
    <string name="retry_label">Retry</string>
    <string name="overwrite_label">Overwrite</string>
    <string name="overwrite_body1">Picture already exist with this </string>
    <string name="overwrite_body2"> name, overwriting it shall remove existing picture. Do you want to overwrite it?</string>
    <string name="rename_err_msg">Name cannot be empty!</string>
    <string name="name_update">Name Updated</string>
    <string name="ad_label">Ad</string>
    <string name="del_img_header">Delete Image</string>
    <string name="del_img_msg">Do you want to delete this converted image?</string>
    <string name="del_img_success_msg">Photo deleted successfully</string>
    <string name="image_deleted_label">Image Deleted</string>
    <string name="choose_picture_lbl">Choose Picture</string>
    <string name="saving_your_image_lbl">Hold on!! \nYour image is being saved!</string>
    <string name="splash_tag_1">Customize your Picture</string>
    <string name="splash_tag_2">with </string>
    <string name="splash_tag_3">Beauty Camera </string>
    <string name="splash_tag_4">App</string>
    <string name="continue_label">Continue</string>
    <string name="loading_ad_label">Loading Ad</string>
    <string name="agreement_dialog_label">User\'s Agreement</string>
    <string name="agreement_body_1">We respect your privacy and are committed to protect your personal date safe. For information on the steps we take to protect your privacy and how we use your information, Please review our Privacy Notice.</string>
    <string name="terms_of_service_1">I accept the</string>
    <string name="terms_of_service_2"><u>Terms of Service</u></string>
    <string name="agreement_btn_label"><![CDATA[Agree & Continue]]></string>
    <string name="exit_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="reset_image_body">Are you sure you want to reset image?</string>
    <string name="bg_remover_lbl">Background Remover</string>
    <string name="bg_remover_msg">Witness the magic of our AI Background Remover</string>
    <string name="bg_remover_ai">AI Background Remover</string>
</resources>