<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/bg_dialog_rounded_sides">

    <ImageView
        android:id="@+id/iv_agreementLogo"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_user_agreement" />

    <LinearLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_agreementLogo"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/agreement_dialog_label"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:text="@string/agreement_body_1"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_termsOfService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:text="@string/terms_of_service_1"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/tv_termsOfService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center_horizontal"
            android:text="@string/terms_of_service_2"
            android:textColor="@color/bold_purple"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_termsOfService"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/bg_main_rounded_btn"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/agreement_btn_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:visibility="visible" />

</RelativeLayout>