<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.SplashActivity">

    <LinearLayout
        android:id="@+id/ll_topImages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_3sdp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_50sdp"
        android:weightSum="3">

        <ImageView
            android:id="@+id/iv_animSplash1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_splashbg_1" />

        <ImageView
            android:id="@+id/iv_animSplash2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:src="@drawable/ic_splashbg_2" />

        <ImageView
            android:id="@+id/iv_animSplash3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:src="@drawable/ic_splashbg_3" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_splashbg_overlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rl_ads"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/satoshi_bold"
                android:gravity="center_horizontal"
                android:text="@string/splash_tag_1"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satoshi_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/splash_tag_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:fontFamily="@font/satoshi_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/splash_tag_3"
                    android:textColor="@color/bold_purple"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satoshi_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/splash_tag_4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />


            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_splash_zigzagline" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp">

                <com.sasank.roundedhorizontalprogress.RoundedHorizontalProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:maxHeight="@dimen/_15sdp"
                    android:minHeight="@dimen/_15sdp"
                    app:backgroundColor="@color/white"
                    app:progressColor="@color/lightPurple" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_main_rounded_btn"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/continue_label"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_ad_border"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_loadingAd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_20sdp"
                android:text="@string/loading_ad_label"
                android:textColor="@color/dull_purple"
                android:textSize="@dimen/_10ssp" />

            <FrameLayout
                android:id="@+id/fl_adContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp" />

        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>