<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RemoveBackgroundActivity">

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_back_white" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_toEndOf="@+id/rl_back"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/bg_remover_lbl"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <RelativeLayout
            android:id="@+id/rl_saveImage"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/bg_less_rounded_dialog_btn"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/save_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_uploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center_horizontal"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/access_denied_anim" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/bg_remover_ai"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/poppinlight"
            android:gravity="center_horizontal"
            android:text="@string/bg_remover_msg"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_previewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_uploadImage"
        android:layout_below="@+id/rl_top_bar"
        android:layout_marginBottom="@dimen/_10sdp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_displayImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/iv_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:src="@drawable/ic_original"
            android:visibility="gone" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_uploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/bg_main_rounded_btn"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/choose_picture_lbl"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/rl_savingPicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/transBackground"
        android:textColor="@color/darkGreyishPurple"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view2"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/saving_picture_anim" />

        <TextView
            android:id="@+id/tv_savingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/animation_view2"
            android:layout_centerInParent="true"
            android:background="@drawable/selected_image_bg"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/saving_your_image_lbl"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>

</RelativeLayout>